# pololu-3pi-2040-robot

./: LICENSE.txt  LICENSE_pio_quadrature_counter.txt  README.md  generate_font.py
c/: .gitignore  Doxyfile  README.md  shell.nix
c/blink/: CMakeLists.txt  blink.c
c/blink_leds/: CMakeLists.txt  blink_leds.c
c/button_test/: CMakeLists.txt  button_test.c
c/display_benchmark/: CMakeLists.txt  display_benchmark.c
c/include/: pololu_3pi_plus_2040_robot.h
c/ir_sensors_demo/: CMakeLists.txt  ir_sensors_demo.c
c/ir_sensors_test/: CMakeLists.txt  ir_sensors_test.c
c/motors_test/: CMakeLists.txt  motors_test.c
c/pololu_3pi_2040_robot/: CMakeLists.txt  battery.c  button.c  display.c  font_8x16.c  font_8x8.c  ir_sensors.c  motors.c  oled_font.c  qtr_sensor_counter.pio  rgb_leds.c  sh1106.c  yellow_led.c
c/pololu_3pi_2040_robot/include/: button.h  display.h  ir_sensors.h  motors.h  pololu_3pi_2040_robot.h  rgb_leds.h  sh1106.h
c/pololu_3pi_plus_2040_robot/: CMakeLists.txt  battery.c  button.c  ir_sensors.c  motors.c  qtr_sensor_counter.pio  rgb_leds.c  sh1106.c  yellow_led.c
c/power_detect/: CMakeLists.txt  power_detect.c
c/rgb_leds_test/: CMakeLists.txt  rgb_leds_test.c
micropython_demo/: LICENSE_sh1106.txt  README.html  blink.py  button_test.py  demo.py  encoder_test.py  error.py  face_uphill.py  gyro_turn.py  i2c0_scan.py  imu_test.py  ir_sensor_demo.py  ir_sensor_test.py  line_follower.py  main.py  main_menu.py  motor_test.py  music.py  rgb_demo.py  rgb_test.py  rotation_resist.py  self_test.py  siren.py  spin.py  sys_info.py  test_enc.py  wall_bumper.py
micropython_demo/pololu_3pi_2040_robot/: buttons.py  buzzer.py  display.py  encoders.py  imu.py  ir_sensors.py  motors.py  rgb_leds.py  yellow_led.py
micropython_demo/pololu_3pi_2040_robot/_lib/: imu_sensor.py  lis3mdl.py  lsm6dso.py  pio_quadrature_counter.py
micropython_demo/pololu_3pi_2040_robot/_tests/: ir_sensors_test.py  motors_test.py  rgb_led_test.py
micropython_demo/pololu_3pi_2040_robot/extras/: editions.py  menu.py  splash.pbm  splash_loader.py
micropython_demo/pololu_3pi_plus_2040_robot/: __init__.py  battery.py  buttons.py  buzzer.py  encoders.py  imu.py  ir_sensors.py  menu.py  motors.py  rgb_leds.py  run_file.py  spin.py  splash.pbm  splash_loader.py
micropython_demo/pololu_3pi_plus_2040_robot/_features/: battery.py  buttons.py  buzzer.py  display.py  encoders.py  ir_sensors.py  motors.py  rgb_leds.py  yellow_led.py
micropython_demo/pololu_3pi_plus_2040_robot/_lib/: imu_sensor.py  lis3mdl.py  lsm6dso.py  qtr_sensors.py  read_bootsel.py  sh1106.py  sh1106_shared_spi.py
micropython_demo/pololu_3pi_plus_2040_robot/extras/: menu.py  splash_loader.py
micropython_demo/tests/: ir_sensors_test.py  motors_test.py
