cmake_minimum_required(VERSION 3.13)
include("$ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake")
project(test_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra)
pico_sdk_init()
add_subdirectory(../pololu_3pi_plus_2040_robot 3pilib)
add_executable(blink_leds blink_leds.c)
pico_enable_stdio_usb(blink_leds 1)
pico_enable_stdio_uart(blink_leds 0)
pico_add_extra_outputs(blink_leds)
target_link_libraries(blink_leds pololu_3pi_plus_2040_robot)
