cmake_minimum_required(VERSION 3.13)
set(CMAKE_BUILD_TYPE Debug)  # bug workaround
if (DEFINED ENV{PICO_SDK_PATH})
  include("$ENV{PICO_SDK_PATH}/pico_sdk_init.cmake")
else ()
  include("../pico-sdk/pico_sdk_init.cmake")
endif()
project(project C CXX ASM)
add_compile_options(-Wall -Wextra)
pico_sdk_init()
add_subdirectory(../pololu_3pi_plus_2040_robot pololu_3pi_plus_2040_robot)

add_executable(blink_leds blink_leds.c)
pico_enable_stdio_usb(blink_leds 1)
pico_enable_stdio_uart(blink_leds 0)
pico_add_extra_outputs(blink_leds)
target_link_libraries(blink_leds pololu_3pi_plus_2040_robot)
