cmake_minimum_required(VERSION 3.13)
if (DEFINED ENV{PICO_SDK_PATH})
  include("$ENV{PICO_SDK_PATH}/pico_sdk_init.cmake")
else ()
  include("../pico-sdk/pico_sdk_init.cmake")
endif()
project(project C CXX ASM)
add_compile_options(-Wall -Wextra)
pico_sdk_init()
add_subdirectory(../pololu_3pi_2040_robot pololu_3pi_2040_robot)

add_executable(button_test button_test.c)
pico_enable_stdio_usb(button_test 1)
pico_enable_stdio_uart(button_test 0)
pico_add_extra_outputs(button_test)
target_link_libraries(button_test pololu_3pi_2040_robot)
