cmake_minimum_required(VERSION 3.13)
if (DEFINED ENV{PICO_SDK_PATH})
  include("$ENV{PICO_SDK_PATH}/pico_sdk_init.cmake")
else ()
  include("../pico-sdk/pico_sdk_init.cmake")
endif()
project(project C CXX ASM)
add_compile_options(-Wall -Wextra)
pico_sdk_init()
add_subdirectory(../pololu_3pi_2040_robot pololu_3pi_2040_robot)

add_executable(ir_sensors_demo ir_sensors_demo.c)
pico_enable_stdio_usb(ir_sensors_demo 1)
pico_enable_stdio_uart(ir_sensors_demo 0)
pico_add_extra_outputs(ir_sensors_demo)
target_link_libraries(ir_sensors_demo pololu_3pi_2040_robot)
