add_library(pololu_3pi_2040_robot
  battery.c
  button.c
  ir_sensors.c
  motors.c
  rgb_leds.c
  sh1106.c
  yellow_led.c
)
pico_generate_pio_header(pololu_3pi_2040_robot
  ${CMAKE_CURRENT_LIST_DIR}/qtr_sensor_counter.pio
)
target_include_directories(pololu_3pi_2040_robot PUBLIC include)
target_link_libraries(pololu_3pi_2040_robot
  pico_stdlib
  hardware_adc
  hardware_pio
  hardware_pwm
  hardware_spi
)
